removed hidden overflow from body and added fixed height to #react

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,7 @@
+:root {
+  --titlebar-height: 24px;
+}
+
 html, body {
   background-color: #262626;
   color: #B1B1B1;
@@ -5,15 +9,18 @@ html, body {
 
   margin: 0;
   padding: 0;
-
-  overflow: hidden;
 }
 
 #titlebar {
   width: 100%;
-  height: 24px;
+  height: var(--titlebar-height);
   background-color: #212121;
   -webkit-app-region: drag;
+}
+
+#react {
+  overflow: auto;
+  height: calc(100vh - var(--titlebar-height))
 }
 
 .question-container {
